--- a/public/learningHubTemplates/hubPostEdit.html
+++ b/public/learningHubTemplates/hubPostEdit.html
@@ -34,7 +34,7 @@
                 <span class="help-block"></span>
             </div>
             <!-- Aggregate Data submit-->
-            <button ng-click="vm.confirmEdit(vm.post)" class="btn btn-primary" ng-disabled="editPostData.$invalid">Edit</button>
+            <button ng-click="vm.confirmEdit(vm.post)" class="btn btn-primary" ng-disabled="editPostData.$invalid">Save</button>
             <span>
                 <button ng-click="vm.cancelEdit()" class="btn btn-primary">Cancel</button>
             </span>
