--- a/public/learningHubTemplates/hubaudio.html
+++ b/public/learningHubTemplates/hubaudio.html
@@ -1,4 +1,4 @@
-<div class="box box-default audio-box">
+<div class="{{'box box-default audio-box' + (vm.highlight == vm.post.postId ? ' ext-res-highlight':'')}}">
     <div class="box-header audio-header">
         <div class="row">
             <div class="col-xs-1 text-center icon audio-icon"><i class="fa  fa-file-audio-o fa-2x"></i></div>
@@ -30,7 +30,7 @@
     <div class="box-body audio-body">
         <div class="row">
             <div class="col-xs-1" ng-show="!vm.space">
-                <voting vote-type="link" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
+                <voting vote-type="external resource" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
             </div>
             <div class="col-xs-11 text-center audio-wrapper" ng-show="!pa">
                 <div ng-bind-html="vm.post.embedHtml | trustHtml"></div>
