--- a/public/learningHubTemplates/hubimage.html
+++ b/public/learningHubTemplates/hubimage.html
@@ -1,4 +1,4 @@
-<div class="box box-default image-box">
+<div class="{{'box box-default image-box' + (vm.highlight == vm.post.postId ? ' ext-res-highlight':'')}}">
     <div class="box-header image-header">
         <div class="row">
             <div class="col-xs-1 text-center icon image-icon"><i class="fa fa-image fa-2x"></i></div>
@@ -30,7 +30,7 @@
     <div class="box-body image-body">
         <div class="row">
             <div class="col-xs-1" ng-show="!vm.space">
-                <voting vote-type="link" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
+                <voting vote-type="external resource" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
             </div>
             <div class="col-xs-11 image-wrapper hub-image center-block">
                 <div ng-bind-html="vm.post.embedHtml | trustHtml"></div>
