--- a/public/learningHubTemplates/hubslide.html
+++ b/public/learningHubTemplates/hubslide.html
@@ -1,4 +1,4 @@
-<div class="box box-default slide-box">
+<div class="{{'box box-default slide-box' + (vm.highlight == vm.post.postId ? ' ext-res-highlight':'')}}">
     <div class="box-header slide-header">
         <div class="row">
             <div class="col-xs-1 text-center icon slide-icon"><i class="fa  fa-slideshare fa-2x"></i></div>
@@ -30,7 +30,7 @@
     <div class="box-body slide-body">
         <div class="row">
             <div class="col-xs-1" ng-show="!vm.space">
-                <voting vote-type="link" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
+                <voting vote-type="external resource" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
             </div>
             <div class="col-xs-11 text-center slide-wrapper">
                 <div ng-bind-html="vm.post.embedHtml | trustHtml"></div>
